--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.1",
     "nodemon": "^3.1.10"
   }
 }
